--- a/android-client/app/src/main/res/values/strings.xml
+++ b/android-client/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">hashtag</string>
+    <string name="app_name">ITrackU</string>
     <string name="error_writing_bitmap">error</string>
 </resources>
